--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,22 +2,34 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
            xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
            version="2.5">
-
+     
     <filter>
         <filter-name>router</filter-name>
         <filter-class>net.azib.photos.RequestRouter</filter-class>
     </filter>
-
+ 
     <filter-mapping>
         <filter-name>router</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+ 
     <servlet>
         <servlet-name>sitemap</servlet-name>
         <servlet-class>net.azib.photos.SiteMapServlet</servlet-class>
     </servlet>
-
+<!-- 
+	<servlet>
+        <servlet-name>init</servlet-name>
+        <servlet-class>com.footstone.photos.InitServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+-->
+<!--  
+    <servlet>
+        <servlet-name>test</servlet-name>
+        <servlet-class>com.footstone.photos.TestServlet</servlet-class>
+    </servlet>
+-->
     <servlet-mapping>
         <servlet-name>sitemap</servlet-name>
         <url-pattern>/robots.txt</url-pattern>
@@ -29,8 +41,30 @@
         <servlet-class>net.azib.photos.JsonpServlet</servlet-class>
     </servlet>
 
+	<servlet>
+        <servlet-name>ImageViewServlet</servlet-name>
+        <servlet-class>com.footstone.photos.ImageViewServlet</servlet-class>
+    </servlet>
+    
     <servlet-mapping>
         <servlet-name>gallery-jsonp</servlet-name>
         <url-pattern>/data/gallery.js</url-pattern>
     </servlet-mapping>
+    <!-- 
+    <servlet>
+        <servlet-name>writeTest</servlet-name>
+        <servlet-class>com.footstone.photos.FileWriteTestServlet</servlet-class>
+    </servlet>
+    
+     <servlet-mapping>
+        <servlet-name>test</servlet-name>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
+     -->
+     <!-- 
+    <servlet-mapping>
+        <servlet-name>ImageViewServlet</servlet-name>
+        <url-pattern>/image</url-pattern>
+    </servlet-mapping>
+     -->
 </web-app>
