--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,11 @@
 # Google/Picasaweb username
-google.user=anton.keks
+google.user=njzeroc
+
+image.url=http://p1.footstone.me/photos/;http://p2.footstone.me/photos/
+
+local.path=/home/footstone/p1.footstone.me/photos
 
 # Google Analytics account (comment out if not needed)
-google.analytics=UA-10776266-1
+#google.analytics=UA-10776266-1
 
 # Appengine application ID is in web/WEB-INF/appengine-web.xml
