--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,7 @@
 # Google/Picasaweb username
 google.user=njzeroc
 
-image.url=http://p1.footstone.me/photos/;http://p2.footstone.me/photos/
+#image.url=http://p1.footstone.me/photos/;http://p2.footstone.me/photos/
 
 local.path=/home/footstone/p1.footstone.me/photos
 
